<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingBottom="@dimen/vertical_margin"
    android:stretchColumns="0,1,2,3"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/display_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="5"
            android:background="@color/orange_cream"
            android:minHeight="2dip"
            android:onClick="goOperator"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="70sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_span="2"
            android:background="@color/dusk_blue"
            android:contentDescription="@string/all_clear"
            android:minHeight="80dip"
            android:onClick="goAC"
            android:text="@string/all_clear"
            android:textSize="28sp" />

        <Button
            android:id="@+id/mod_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_span="1"
            android:background="@color/grey"
            android:contentDescription="@string/mod"
            android:minHeight="80dip"
            android:onClick="goOperator"
            android:text="@string/mod"
            android:textSize="28sp" />

        <Button
            android:id="@+id/division_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_span="1"
            android:background="@color/grey"
            android:contentDescription="@string/division"
            android:minHeight="80dip"
            android:onClick="goOperator"
            android:text="/"
            android:textSize="28sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/seven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/seven"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/seven"
            android:textSize="28sp" />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/eight"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/eight"
            android:textSize="28sp" />

        <Button
            android:id="@+id/nine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/nine"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/nine"
            android:textSize="28sp" />

        <Button
            android:id="@+id/multiplication_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/multiplication"
            android:minHeight="80dip"
            android:onClick="goOperator"
            android:text="@string/multiplication"
            android:textSize="28sp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/four"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/four"
            android:textSize="28sp" />

        <Button
            android:id="@+id/five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/five"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/five"
            android:textSize="28sp" />

        <Button
            android:id="@+id/six_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/six"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/six"
            android:textSize="28sp" />

        <Button
            android:id="@+id/subtraction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/subtraction"
            android:minHeight="80dip"
            android:onClick="goOperator"
            android:text="@string/subtraction"
            android:textSize="28sp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/one"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/one"
            android:textSize="28sp" />

        <Button
            android:id="@+id/two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/two"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/two"
            android:textSize="28sp" />

        <Button
            android:id="@+id/three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/three"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/three"
            android:textSize="28sp" />

        <Button
            android:id="@+id/addition_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/grey"
            android:contentDescription="@string/addition"
            android:minHeight="80dip"
            android:onClick="goOperator"
            android:text="@string/addition"
            android:textSize="28sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/zero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_span="2"
            android:background="@color/grey"
            android:contentDescription="@string/zero"
            android:minHeight="80dip"
            android:onClick="goOperand"
            android:text="@string/zero"
            android:textSize="28sp" />

        <Button
            android:id="@+id/equals_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_span="2"
            android:background="@color/dusk_blue"
            android:contentDescription="@string/equals"
            android:minHeight="80dip"
            android:onClick="goCompute"
            android:text="@string/equals"
            android:textSize="28sp" />

    </TableRow>
</TableLayout>